@@ -1,6 +1,6 @@
 {
     "name": "Factorio-Tiberium",
-    "version": "1.1.27",
+    "version": "1.1.28",
     "title": "Factorio and Conquer: Tiberian Dawn",
     "author": "JamesFire",
     "contact": "",
